preenchendo conteudo. ainda falta

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="about-me-container">
                 <div class="card" style="display: flex; justify-content: center; padding: 5%; align-items: center;">
-                    <spam class="about-me-text" style="text-align: left; font-style: oblique;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam>
+                    <spam class="about-me-text" style="text-align: left; font-style: oblique;"> Olá! Seja bem vindo a esse site de portfolio criado por mim! Meu nome é Matheus Ferreira Marquesini, tenho 20 anos e sou natural de Curitiba, Paraná. Atualmente, estou cursando Informática Biomédica na Universidade Federal do Paraná (UFPR). Além de meus estudos, exerço um papel importante como diretor da Empresa Junior de Computação da UFPR (Ecomp), onde também atuo como desenvolvedor front-end.</spam>
                 </div>
                  <div class="carousel">
                     <!-- Radio buttons para controlar o carrossel -->
@@ -119,31 +119,41 @@
             <div style="display: flex; flex-direction: row;">
                 <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
                     <img class="img-skills" src="assets/nginx(1).png" alt="">
-                    <spam class="text-sk" style="text-align: left;"> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam> 
+                    <spam class="text-sk" style="text-align: left;"> Sei como utilizar o Nginx como proxy reverso para gerenciar e expor aplicações na web. O Nginx é um servidor web poderoso e flexível que pode ser configurado para atuar como um proxy reverso, permitindo que você direcione o tráfego de entrada para diferentes servidores e aplicações.</spam> 
                 </div>
                 <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
                     <img class="img-skills" src="assets/vue-removebg-preview.png" alt="">
-                    <spam class="text-sk" style="text-align: left;"> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam>
+                    <spam class="text-sk" style="text-align: left;"> Eu sou proficiente em utilizar o Vue.js, um framework progressivo para construção de interfaces de usuário e aplicações de uma única página. O Vue.js é conhecido por sua abordagem reativa e componente baseada, tornando-o uma escolha popular para desenvolvedores que desejam criar interfaces dinâmicas e interativas com facilidade.</spam>
                 </div>
             </div>
             <div style="display: flex; flex-direction: row;">
                  <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
                     <img class="img-skills" src="assets/c.png" alt="">
-                    <spam class="text-sk" style="text-align: left;"> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam>
+                    <spam class="text-sk" style="text-align: left;"> Eu tenho experiência em programação com a linguagem C, uma das linguagens de programação mais fundamentais e amplamente utilizadas e a minha linguagem masi utilizada durante meu perido de formação. </spam>
                 </div>
                 <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
                     <img class="img-skills" src="assets/laravel.png" alt="">
-                    <spam class="text-sk" style="text-align: left;"> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam>
+                    <spam class="text-sk" style="text-align: left;"> Eu sou proficiente em utilizar o Laravel, um framework PHP moderno e robusto que facilita o desenvolvimento de aplicações web de forma rápida e eficiente. O Laravel é conhecido por sua sintaxe elegante e por oferecer uma ampla gama de funcionalidades integradas que simplificam tarefas comuns de desenvolvimento.</spam>
                 </div>
             </div>
             <div style="display: flex; flex-direction: row;">
                  <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
                     <img class="img-skills" src="assets/rn.png" alt="">
-                    <spam class="text-sk" style="text-align: left;"> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam>
+                    <spam class="text-sk" style="text-align: left;"> Eu sou proficiente em utilizar o React Native, uma biblioteca desenvolvida pelo Facebook que permite a criação de aplicações móveis nativas para iOS e Android usando JavaScript e React. O React Native é conhecido por sua capacidade de compartilhar código entre plataformas.</spam>
                 </div>
                 <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
                     <img class="img-skills" src="assets/js.png" alt="">
-                    <spam class="text-sk" style="text-align: left;"> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</spam>
+                    <spam class="text-sk" style="text-align: left;"> Eu sou proficiente em JavaScript, uma linguagem de programação essencial para o desenvolvimento web que permite a criação de interfaces dinâmicas e interativas no lado do cliente. JavaScript é uma linguagem versátil que pode ser utilizada tanto no frontend quanto no backend, oferecendo uma ampla gama de funcionalidades e bibliotecas para otimizar o desenvolvimento de aplicações web</spam>
+                </div>
+            </div>
+                <div style="display: flex; flex-direction: row;">
+                 <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
+                    <img class="img-skills" src="assets/docker-removebg-preview.png" alt="">
+                    <spam class="text-sk" style="text-align: left;"> Eu sou proficiente em Docker, uma plataforma que automatiza o desenvolvimento, a entrega e a execução de aplicações em contêineres. Docker permite empacotar uma aplicação e suas dependências em um contêiner leve e portátil, garantindo que ela funcione de maneira consistente em diferentes ambientes, desde desenvolvimento até produção.</spam>
+                </div>
+                <div class="card-1" style="display: flex; padding: 3%; align-items: center; gap: 2%;">
+                    <img class="img-skills" src="assets/st_small_507x507-pad_600x600_f8f8f8-removebg-preview.png" alt="">
+                    <spam class="text-sk" style="text-align: left;"> Eu sou proficiente em MySQL, um dos sistemas de gerenciamento de banco de dados relacionais mais populares e amplamente utilizados. MySQL é conhecido por sua robustez, flexibilidade e eficiência, sendo uma escolha comum para armazenar e gerenciar dados em aplicações web e sistemas de diversos tamanhos.</spam>
                 </div>
             </div>
         </section>
@@ -155,7 +165,7 @@
                <div style="padding: 8%;">
                     <div class="toggle-section">
                         <div class="toggle-container" onclick="toggleText(this)">
-                            <span class="toggle">experiencia 1</span>
+                            <span class="toggle">Estudande de IBM na UFPR</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
                         <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
@@ -163,7 +173,7 @@
                     </div>
                     <div class="toggle-section">
                         <div class="toggle-container" onclick="toggleText(this)">
-                            <span class="toggle">experiencia 2</span>
+                            <span class="toggle">Membro da ecomp</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
                         <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
@@ -171,7 +181,7 @@
                     </div>
                     <div class="toggle-section">
                         <div class="toggle-container" onclick="toggleText(this)">
-                            <span class="toggle">experiencia 3</span>
+                            <span class="toggle">Diretor da ecomp</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
                         <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
@@ -179,7 +189,7 @@
                     </div>
                     <div class="toggle-section">
                         <div class="toggle-container" onclick="toggleText(this)">
-                            <span class="toggle">experiencia 4</span>
+                            <span class="toggle">Desenvolvedor front-end</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
                         <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.a</div>
@@ -187,7 +197,7 @@
                     </div>
                     <div class="toggle-section">
                         <div class="toggle-container" onclick="toggleText(this)">
-                            <span class="toggle">experiencia 5</span>
+                            <span class="toggle">Soft Skills</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
                         <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
