finalizado ajustes e textos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" type="imagex/png" href="/assets/html.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/folha.png">
   </head>
   <body>
         <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 0, 0, 0.925); position: fixed; top: 0; width: 100%; z-index: 1000;">
@@ -32,16 +32,16 @@
                     <div class="offcanvas-body justify-content-end">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Home</a>
+                                <a class="txt-expand nav-link text-white" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#Sobre mim">Sobre Mim</a>
+                                <a class="txt-expand nav-link text-white" href="#Sobre mim">Sobre Mim</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#Habilidades">Habilidades</a>
+                                <a class="txt-expand nav-link text-white" href="#Habilidades">Habilidades</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#Experiencias">Experiências</a>
+                                <a class="txt-expand nav-link text-white" href="#Experiencias">Experiências</a>
                             </li>
                         </ul>
                     </div>
@@ -105,9 +105,9 @@
                     </div>
                 </div>
                 <div style="display: flex; justify-content: center; padding: 2%;">
-                    <a href="https://github.com/mTh22k" class="mb-3 w-100 text-center text-black"><img  style="max-width: 25px;" src="assets/github.png" class="d-inline rounded float-left">/mTh22k</a>
-                    <a href="https://www.instagram.com/m.marquesini_777/" class="mb-3 w-100 text-center text-black"><img style="max-width: 25px;" src="assets/Instagram_icon.png" class="d-inline rounded float-left">/m.marquesini_777</a>
-                    <a href="https://www.linkedin.com/in/matheus-marquesini-14b663276/" class="w-100 text-center text-black"><img style="max-width: 25px;" src="assets/link-removebg-preview.png" class="d-inline rounded float-left">/Matheus Marquesini</a>
+                    <a target="_blank" href="https://github.com/mTh22k" class="mb-3 w-100 text-center text-black"><img  style="max-width: 25px;" src="assets/github.png" class="d-inline rounded float-left">/mTh22k</a>
+                    <a target="_blank" href="https://www.instagram.com/m.marquesini_777/" class="mb-3 w-100 text-center text-black"><img style="max-width: 25px;" src="assets/Instagram_icon.png" class="d-inline rounded float-left">/m.marquesini_777</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/matheus-marquesini-14b663276/" class="w-100 text-center text-black"><img style="max-width: 25px;" src="assets/link-removebg-preview.png" class="d-inline rounded float-left">/Matheus Marquesini</a>
                 </div>
             </div>
         </section>
@@ -168,7 +168,7 @@
                             <span class="toggle">Estudande de IBM na UFPR</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
-                        <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                        <div class="toggle-text">Sou estudante de informatica Biomedica da Federal, estou no quarto periodo do curso, minha maior motivação ao entrar no curso, foi a mistura entre as areas da saude e a informatica, que são dois temas que tenho muito interesse. </div>
                         <hr>
                     </div>
                     <div class="toggle-section">
@@ -176,7 +176,7 @@
                             <span class="toggle">Membro da ecomp</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
-                        <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                        <div class="toggle-text">Como membro da empresa júnior de informática da UFPR, consegui adquirir muitas experiências em como uma empresa da área funciona de verdade, e poder trabalhar tanto minhas soft skills quanto hard skills. Foram 1 ano e 2 meses atuando como membro, onde fui designado à parte mais técnica da empresa, atuando no deploy de sites e aplicativos, code review dos projetos, mexer com alguns tipos de servidores, e o próprio desenvolvimento web.</div>
                         <hr>
                     </div>
                     <div class="toggle-section">
@@ -184,7 +184,7 @@
                             <span class="toggle">Diretor da ecomp</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
-                        <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                        <div class="toggle-text">Agora como um dos diretores da ECOMP, onde ainda atuo desde janeiro de 2024, aprendi além da parte operacional da empresa, mas como ela funciona por trás, numa visão mais tática, em decidir o rumo da empresa junto aos outros diretores. Tem sido uma experiência muito desafiadora, mas acredito que estamos indo muito bem até aqui.</div>
                         <hr>
                     </div>
                     <div class="toggle-section">
@@ -192,7 +192,7 @@
                             <span class="toggle">Desenvolvedor front-end</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
-                        <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.a</div>
+                        <div class="toggle-text">Atuando como desenvolvedor, realizei em alguns projetos ajudando no desenvolvimento, e como dev em um que tinha a premissa de ser um marketplace de produtos odontológicos, onde era possível tanto cadastrar um produto à venda, quanto comprar um produto, trabalhando com verificações de tipos de usuários. Foi um projeto complexo de meses desenvolvendo, que foi terminado no começo de 2024.</div>
                         <hr>
                     </div>
                     <div class="toggle-section">
@@ -200,7 +200,7 @@
                             <span class="toggle">Soft Skills</span>
                             <i class="toggle-icon">&#9660;</i> <!-- Ícone de seta para baixo -->
                         </div>
-                        <div class="toggle-text">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+                        <div class="toggle-text">Alguns exemplos de soft skills que desenvolvi são : comunicação, resiliência, trabalho em equipe, empatia, liderança, gestão de equipe, pensamento crítico, gestão de tempo e proatividade.</div>
                     </div>
                 </div>
         </section>
@@ -208,9 +208,9 @@
          <footer>
             <div class="mx-md-5 px-lg-5 pb-5 d-md-flex justify-content-center justify-content-md-around position-relative" style="padding: 25px;">
                 <div class="p-2 col-md-4 bd-highlight justify-content-center " style="display: flex; flex-direction: column; text-decoration: none; text-align: left;">
-                    <a href="https://github.com/mTh22k" class="mb-3 w-100 text-center text-white"><img  style="max-width: 25px;" src="assets/github.png" class="d-inline rounded float-left">/mTh22k</a>
-                    <a href="https://www.instagram.com/m.marquesini_777/" class="mb-3 w-100 text-center text-white"><img style="max-width: 25px;" src="assets/instagram.png" class="d-inline rounded float-left">/m.marquesini_777</a>
-                    <a href="https://www.linkedin.com/in/matheus-marquesini-14b663276/" class="w-100 text-center text-white"><img style="max-width: 25px;" src="assets/linkedin.png" class="d-inline rounded float-left">/Matheus Marquesini</a>
+                    <a target="_blank" href="https://github.com/mTh22k" class="mb-3 w-100 text-center text-white"><img  style="max-width: 25px;" src="assets/github.png" class="d-inline rounded float-left">/mTh22k</a>
+                    <a target="_blank" href="https://www.instagram.com/m.marquesini_777/" class="mb-3 w-100 text-center text-white"><img style="max-width: 25px;" src="assets/instagram.png" class="d-inline rounded float-left">/m.marquesini_777</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/matheus-marquesini-14b663276/" class="w-100 text-center text-white"><img style="max-width: 25px;" src="assets/linkedin.png" class="d-inline rounded float-left">/Matheus Marquesini</a>
                 </div>
                 <div class="p-2 col-md-3 bd-highlight" style="display: flex; justify-content: center;">
                     <img class="logo footer-logo" src="assets/ufpr_logo.png">
